--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ fastapi
 uvicorn[standard]
 gunicorn
 pydantic
-langchain
+langchain<0.3.0
+langchain-core<0.3.0
 langchain-google-genai
-langchain_community
+langchain_community<0.3.0
 tiktoken
+requests
+python-dotenv
 google-generativeai
 google-genai
-requests
-python-multipart
-dotenv
